--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
     <artifactId>recipeApp</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>recipeApp</name>
-    <description>Проект для работы с рецептами</description>
+    <description>проект для работы с рецептами</description>
     <properties>
         <java.version>17</java.version>
     </properties>
