--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,3 @@
-path.to.date.file = src/main/resources
+path.to.data.file = src/main/resources
 name.of.recipes.file = recipes.json
+name.of.ingredients.file = ingredients.json
